==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_board.c <==
#include <mios32.h>
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#define J5_NUM_PINS 0
#define J5_NUM_PINS 0
#define J5_NUM_PINS 0
#define J10_NUM_PINS 0
#define J10_NUM_PINS 0
#define J10_NUM_PINS 0
# define J28_NUM_PINS 0
# define J28_NUM_PINS 0
# define J28_NUM_PINS 0
#define J15_MODE 1	//Serial only
#define J15_SER_PORT       GPIOA        // used as DC (data/command select) for serial interfaces
#define J15_SER_PIN        LL_GPIO_PIN_10
#define J15_E1_PORT        GPIOB        // used to control SCLK of serial interfaces
#define J15_E1_PIN         LL_GPIO_PIN_3
#define J15_RW_PORT        GPIOA        // used to control data output of serial interfaces
#define J15_RW_PIN         LL_GPIO_PIN_12
#define J15_CS1_PORT        GPIOA       // used to control SCLK of serial interfaces
#define J15_CS1_PIN         LL_GPIO_PIN_11
#define J15_CS2_PORT        GPIOA
#define J15_CS2_PIN         LL_GPIO_PIN_15
#define J15_PIN_SER(b)  MIOS32_SYS_STM_PINSET(J15_SER_PORT, J15_SER_PIN, b)
#define J15_PIN_E1(b)   MIOS32_SYS_STM_PINSET(J15_E1_PORT, J15_E1_PIN, b)
#define J15_PIN_RW(b)   MIOS32_SYS_STM_PINSET(J15_RW_PORT, J15_RW_PIN, b)
#define J15_PIN_CS1(b)   MIOS32_SYS_STM_PINSET(J15_CS1_PORT, J15_CS1_PIN, b)
#define J15_PIN_CS2(b)   MIOS32_SYS_STM_PINSET(J15_CS2_PORT, J15_CS2_PIN, b)
#define J15_PIN_SERLCD_DATAOUT(b) MIOS32_SYS_STM_PINSET(J15_RW_PORT, J15_RW_PIN, b)

s32 MIOS32_BOARD_LED_Init(u32 leds)
{
#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
#if MIOS32_BOARD_J15_LED_NUM >= 1
  
  // 2 LEDs are available
  if( leds & 1 ) {
    MIOS32_BOARD_PinInitHlp(GPIOA, LL_GPIO_PIN_12, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
  }
  
#if MIOS32_BOARD_J15_LED_NUM >= 2
  if( leds & 2 ) {
    MIOS32_BOARD_PinInitHlp(GPIOC, LL_GPIO_PIN_7, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED2
  }
#endif
  
  if( leds & 0xfffffffc)
    return -2; // LED doesn't exist
  
#endif
  return 0; // no error
  
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_BOARD_PinInitHlp(GPIOB, LL_GPIO_PIN_1, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_BOARD_PinInitHlp(GPIOB, LL_GPIO_PIN_1, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#else
  return -1; // no LED specified for board
#endif
}

s32 MIOS32_BOARD_LED_Set(u32 leds, u32 value)
{
#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		MIOS32_SYS_STM_PINSET(GPIOA, LL_GPIO_PIN_12, value & 1);
	  }
	#endif
	#if MIOS32_BOARD_J15_LED_NUM >= 2
	  if( leds & 2 ) { // LED2
		MIOS32_SYS_STM_PINSET(GPIOC, LL_GPIO_PIN_7, value & 2);
	  }
	#endif
	  if( leds & 0xfffffffc)
		return -2; // LED doesn't exist

	  return 0; // no error
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		MIOS32_SYS_STM_PINSET(GPIOB, LL_GPIO_PIN_1, value & 1);
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_SYS_STM_PINSET(GPIOB, LL_GPIO_PIN_1, value & 1);
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#else
  // temporary
  return -1; // no LED specified for board
#endif
}

u32 MIOS32_BOARD_LED_Get(void)
{
  u32 values = 0;

#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOA->ODR & LL_GPIO_PIN_12 ) // LED1
		values |= (1 << 0);
	#endif
	#if MIOS32_BOARD_J15_LED_NUM >= 2
	  if( GPIOC->ODR & LL_GPIO_PIN_7 ) // LED2
		values |= (1 << 1);
	#endif
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOB->ODR & LL_GPIO_PIN_1 ) // LED1
		values |= (1 << 0);
	#endif

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOB->ODR & LL_GPIO_PIN_1 ) // LED1
		values |= (1 << 0);
	#endif

#endif
  
  return values;
}

s32 MIOS32_BOARD_J5_Set(u16 value)
{
#if J5_NUM_PINS == 0
  return -1; // MIOS32_BOARD_J5 not supported
#else
  int pin;
  u32 mask = 1;
  j5_pin_t *j5_pin_ptr = (j5_pin_t *)&j5_pin[0];
  for(pin=0; pin<J5_NUM_PINS; ++pin, ++j5_pin_ptr, mask <<= 1) {
    if( j5_enable_mask & mask )
      MIOS32_SYS_STM_PINSET(j5_pin_ptr->port, j5_pin_ptr->pin_mask, value & mask);
  }

  return 0; // no error
#endif
}

s32 MIOS32_BOARD_J15_PortInit(u32 mode)
{
#if J15_MODE == 0
  return -1; // LCD port not available
#else
  // currently only mode 0 and 1 supported
  if( mode != 0 && mode != 1 )
    return -1; // unsupported mode

  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);

#if J15_MODE == 2
  J15_PIN_SCLK_0;
  J15_PIN_RCLK_0;
  J15_PIN_E2(0);
#ifdef MIOS32_BOARD_LCD_E3_PORT
  LCD_PIN_E3(0);
#endif
#ifdef MIOS32_BOARD_LCD_E4_PORT
  LCD_PIN_E4(0);
#endif
#elif J15_MODE == 1
  J15_PIN_CS1(0);
  J15_PIN_CS2(0);
#endif
  J15_PIN_RW(0);
  J15_PIN_E1(0);


  // configure push-pull pins
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM; // weak driver to reduce transients
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
#if J15_MODE == 2
  GPIO_InitStructure.Pin = J15_SCLK_PIN;
  LL_GPIO_Init(J15_SCLK_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_RCLK_PIN;
  LL_GPIO_Init(J15_RCLK_PORT, &GPIO_InitStructure);
#elif J15_MODE == 1
  GPIO_InitStructure.Pin = J15_CS1_PIN;
  LL_GPIO_Init(J15_CS1_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_CS2_PIN;
  LL_GPIO_Init(J15_CS2_PORT, &GPIO_InitStructure);
#endif
  // configure open-drain pins (if OD option enabled)
  //if( mode )
    //GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = J15_SER_PIN;
  LL_GPIO_Init(J15_SER_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_E1_PIN;
  LL_GPIO_Init(J15_E1_PORT, &GPIO_InitStructure);
#if J15_MODE == 2
  GPIO_InitStructure.Pin = J15_E2_PIN;
  LL_GPIO_Init(J15_E2_PORT, &GPIO_InitStructure);

#ifdef MIOS32_BOARD_LCD_E3_PORT
  GPIO_InitStructure.Pin = LCD_E3_PIN;
  LL_GPIO_Init(LCD_E3_PORT, &GPIO_InitStructure);
#endif

#ifdef MIOS32_BOARD_LCD_E4_PORT
  GPIO_InitStructure.Pin = LCD_E4_PIN;
  LL_GPIO_Init(LCD_E4_PORT, &GPIO_InitStructure);
#endif
#endif

  GPIO_InitStructure.Pin = J15_RW_PIN;
  LL_GPIO_Init(J15_RW_PORT, &GPIO_InitStructure);

#if J15_MODE >= 2
  // configure "busy" input with pull-up
  GPIO_InitStructure.Mode = LL_GPIO_MODE_INPUT;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
  GPIO_InitStructure.Pin = J15_D7_PIN;
  LL_GPIO_Init(J15_D7_PORT, &GPIO_InitStructure);
#endif
  return 0; // no error
#endif
}
